# quell

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml  flake.nix  justfile  shared.just
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml
assets/models/: basil.glb
scripts/: bevy-lint.sh  build.sh  check.sh  ci.sh  clippy.sh  coverage.sh  deny.sh  play.sh  test.sh
src/: clap.rs  lib.rs  main.rs  plugin.rs
src/docs/: architecture.md  cli.md  events_systems_scopes.md  mod.rs
src/screen/: mod.rs  util.rs
src/screen/dev/: mod.rs
src/screen/dev/camera_test/: data.rs  mod.rs  screen.rs
src/screen/splash/: mod.rs  state.rs  systems.rs
src/screen/world/: mod.rs  screen.rs
src/service/: data.rs  mod.rs  third_party.rs  util.rs
src/service/dev/: mod.rs
src/service/dev/console/: mod.rs  ui.rs
src/service/dev/console/commands/: mod.rs  screen.rs
src/service/dev/gizmos/: data.rs  mod.rs  systems.rs
src/service/input/: data.rs  events.rs  mod.rs
src/service/input/camera/: mod.rs
src/service/input/camera/controller/: data.rs  events.rs  mod.rs
src/service/input/camera/data/: input_ctx.rs  mod.rs
src/service/input/camera/fly/: bundle.rs  data.rs  events.rs  mod.rs
src/service/input/camera/tracking/: bundle.rs  data.rs  events.rs  mod.rs  systems.rs
src/service/input/cursor/: data.rs  events.rs  mod.rs
src/service/player/: data.rs  events.rs  mod.rs  systems.rs
src/service/text/: mod.rs
src/service/ui/: mod.rs
src/service/worldgen/: data.rs  mod.rs
