[package]
name = "quell"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cubething-qproj/quell"

[package.metadata.bevy_lint]
panicking_methods = { level = "warn" }

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
clippy.too_many_arguments = "allow"
clippy.type_complexity = "allow"
clippy.nonstandard_macro_braces = "warn"

[dependencies]
bevy = "0.18"
bevy_enhanced_input = "0.22"
bevy_asset_loader = "0.25"
bevy_mod_debugdump = { optional = true, version = "0.15" }
avian3d = "0.5"
bevy-tnua = "0.29"
bevy-tnua-avian3d = "0.10"
bevy_rich_text3d = "0.6"

# not bevy
tiny_bail = "0.7"
itertools = "0.14.0"
thiserror = "2.0.12"
bitflags = "2.9.3"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
strum = { version = "0.27.2", features = ["derive"] }
variadics_please = "1.1.0"
clap = {version = "4.5.54", features = ["derive"] }

# workspace
q_screens = {path = "../../q_screens/main", version= "^0.1.0" }
q_term = {path = "../../q_term/main", version="^0.1.0"}
bevy-inspector-egui = "0.36.0"

[build-dependencies]
built = {version = "0.8.0", features=["chrono"]}

[features]
dev = [
    "dep:bevy_mod_debugdump",
]
dylib = ["bevy/dynamic_linking"]
